@@ -379,11 +379,12 @@ description=Description
 command=useragent view
 
 [ui.configuration.interfaces]
-display=interface,ip,mask,type,gateway
+display=interface,ip,mask,type,enforcement,gateway
 interface=Interface
 ip=IP
 mask=Netmask
 type=Type
+enforcement=Enforcement
 gateway=Gateway
 command=interfaceconfig get
 
