@@ -156,7 +156,7 @@ $grammar = q {
 
    nodecategory_view_field :  'name' | 'notes'
 
-   interfaceconfig_view_field : 'interface' | 'ip' | 'mask' | 'type' | 'gateway'
+   interfaceconfig_view_field : 'interface' | 'ip' | 'mask' | 'type' | 'gateway' | 'enforcement'
 
    networkconfig_view_field : 'type' | 'netmask' | 'named' | 'dhcpd' | 'gateway' | 'domain-name' | 'dns' | 'dhcp_start' | 'dhcp_end' | 'dhcp_default_lease_time' | 'dhcp_max_lease_time' | 'pf_gateway' | 'next_hop'
 
